--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	gilmaimon/ArduinoWebsockets@^0.5.3
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
-upload_protocol = espota
-upload_port = 192.168.2.144
+;upload_protocol = espota
+;upload_port = 192.168.2.144
